# android_device_xiaomi_sm6150-common

./: .editorconfig  Android.bp  Android.mk  BoardConfigCommon.mk  README.md  base.mk  bdroid_buildcfg.h  build.sh  common-props.mk  common.mk  common64.mk  compatibility_matrix.xml  config.fs  device_framework_matrix_product.xml  extract-files.sh  generate_extra_images.mk  gps_vendor_product.mk  manifest.xml  minimal_config.mk  privapp-permissions-qti-system-ext.xml  privapp-permissions-qti.xml  product.prop  proprietary-files.txt  qti_whitelist.xml  qti_whitelist_system_ext.xml  releasetools.py  sdllvm-lto-defs.mk  sec_config  setup-makefiles.sh  sm6150.mk  stop_scan.mk  system.prop  update-sha1sums.py  utils.mk  vendor.prop  vendor_framework_compatibility_matrix.xml  vendor_hal_makefile_generator.sh  vendor_prop.mk  vendorsetup.sh
android/: Android.mk  LocHidl.mk
appops/: Android.mk
audio/: audio_effects.xml  audio_policy_configuration.xml  audio_policy_configuration_vanilla.xml
audio_amplifier/: Android.mk  audio_amplifier.c
automotive/: bdroid_buildcfg.h
camera_motor/: Android.bp  CameraMotor.cpp  CameraMotor.h  service.cpp  vendor.lineage.camera.motor@1.0-service.xiaomi_davinci.rc
client_api/: Makefile.am  configure.ac
client_api/inc/: LocationApiMsg.h  LocationClientApi.h  LocationClientApiImpl.h
client_api/src/: LocationClientApi.cpp  LocationClientApiImpl.cpp  LocationClientApiImpl.h  LocationClientApiLog.h  LocationClientApiUtils.cpp
client_api_testapp/: Makefile.am  configure.ac  main.cpp
configs/: public.libraries.txt  qti_whitelist.xml
core/: ContextBase.cpp  ContextBase.h  EngineHubProxyBase.h  LocAdapterBase.cpp  LocAdapterBase.h  LocApiBase.cpp  LocApiBase.h  LocDualContext.cpp  Makefile.am  SystemStatus.cpp  SystemStatus.h  SystemStatusOsObserver.cpp  configure.ac
cryptfs_hw/: Android.bp  Android.mk  cryptfs_hw.c
cuttlestone/: AndroidProducts.mk  BoardConfig.mk  README.md  device_cuttlestone_common.mk  device_cuttlestone_x86_64_phone.mk  device_cuttlestone_x86_phone.mk  device_framework_matrix.xml  sdclang.json  vendorsetup.sh
dlkm/: AndroidKernelModule.mk
etc/: Android.bp  gnss_antenna_info.conf  gps.conf
fastboot/: Android.bp
fingerprint/: Android.bp  BiometricsFingerprint.cpp  BiometricsFingerprint.h  android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sm6150.rc  android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sm6150.xml  android.hardware.biometrics.fingerprint@2.3-service.xiaomi_sm6150.rc  android.hardware.biometrics.fingerprint@2.3-service.xiaomi_sm6150.xml  fingerprint.h  service.cpp  vendor.xiaomi.hardware.fingerprintextension@1.0.xml
fod/: Android.bp  FingerprintInscreen.cpp  FingerprintInscreen.h  FodExtension.cpp  UdfpsExtension.cpp  service.cpp  vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.xiaomi_davinci.rc  vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.xiaomi_sm6150.rc  vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.xiaomi_sm6150.xml  vendor.lineage.biometrics.fingerprint.inscreen@1.1-service.xiaomi_sm6150.rc  vendor.lineage.biometrics.fingerprint.inscreen@1.1-service.xiaomi_sm6150.xml
gnss/: GnssAdapter.cpp  GnssAdapter.h  XtraSystemStatusObserver.cpp  XtraSystemStatusObserver.h  location_gnss.cpp
gnsspps/: gnsspps.c
healthd/: Android.mk  healthd_board_msm.cpp  healthd_msm_alarm.cpp
init/: init_msm.c  init_msm.h
integration_api/: Makefile.am  configure.ac
interfaces/: Android.bp  update-makefiles.sh
light/: Android.bp  Light.cpp
livedisplay/: Android.bp  AntiFlicker.cpp  AntiFlicker.h  DisplayModes.cpp  SunlightEnhancement.cpp  SunlightEnhancement.h  service.cpp  vendor.lineage.livedisplay@2.0-service.xiaomi_sm6150.rc  vendor.lineage.livedisplay@2.0-service.xiaomi_sm6150.xml
loc_api/: Android.mk
loc_api/ds_api/: Android.mk  Makefile.am  configure.ac  ds_client.c  loc-ds.pc.in
loc_net_iface/: LocNetIfaceAgps.cpp  LocNetIfaceAgps.h  LocNetIfaceBase.h  Makefile.am  configure.ac
location/: ILocationAPI.h  LocationAPI.cpp  LocationAPI.h  LocationAPIClientBase.cpp  LocationAPIClientBase.h  LocationDataTypes.h  location_interface.h
location_hal_daemon/: LocHalDaemonClientHandler.cpp  LocHalDaemonClientHandler.h  LocHalDaemonIPCReceiver.cpp  LocHalDaemonIPCReceiver.h  LocHalDaemonIPCSender.cpp  LocHalDaemonIPCSender.h  LocationApiMsg.h  LocationApiService.cpp  LocationApiService.h  Makefile.am  PowerEvtHandler.cpp  configure.ac  location_hal_daemon.pc.in  location_hal_initializer  main.cpp
media/: media_codecs.xml  media_codecs_performance_sdmmagpie_v0.xml  media_codecs_sdmmagpie_v0.xml  media_codecs_sdmmagpie_v1.xml  media_codecs_vendor.xml  media_codecs_vendor_sdmmagpie_v0.xml  media_profiles.xml
meta_image/: Android.mk  meta_format.h  meta_image.c
nfc/: libnfc-brcm.conf  libnfc-brcm_NCI2_0.conf  libnfc-nxp.conf
org.ifaa.android.manager/: Android.bp  AndroidManifest.xml
packkernelimg/: Android.mk  packkernelimg
parts/: Android.bp  Android.mk  AndroidManifest.xml
power/: Android.mk  power-660.c  power-710.c  power-8150.c  power-845.c  power-8952.c  power-8953.c  power-8996.c  power-8998.c  power-mode.cpp  power.c  powerhintparser.c  utils.c  utils.h
power-libperfmgr/: Android.bp  Power.cpp
powerstats/: Android.bp  android.hardware.power.stats@1.0-service.xiaomi_sm6150.rc  service.cpp
qapi/: configure.ac
readmac/: Android.bp  xiaomi_readmac.cpp
recovery/: Android.bp
rootdir/: Android.mk
soong/: Android.bp  fod.go
synergy_loc_api/: Android.mk  SynergyLocApi.cpp  SynergyLocApi.h
touch/: Android.bp  TouchFeature.cpp  TouchFeature.h  service.cpp  vendor.lineage.touch@1.0-service.xiaomi_sm6150.rc  vendor.lineage.touch@1.0-service.xiaomi_sm6150.xml
utils/: Android.mk  LocIpc.cpp  LocIpc.h  LogBuffer.cpp  LogBuffer.h  Makefile.am  MsgTask.cpp  SkipList.h  gps_extended_c.h  loc_cfg.cpp  loc_cfg.h  loc_gps.h  loc_log.cpp  loc_log.h  msg_q.c  (+4 more)
utils/loc_qsocket/: LocQsocket.cpp  LocQsocket.h  Makefile.am  configure.ac  loc-qsocket.pc.in
utils/loc_socket/: Android.mk  LocSocket.cpp  LocSocket.h  Makefile.am  configure.ac
(+248 files in other folders)
